--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,21 +9,32 @@ jobs:
     # You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # Be sure to update the docker image tag below to android api version of your application.
     docker:
-      - image: circleci/android:api-28
+      - image: circleci/android:api-30
     steps:
       # Checkout the code as the first step.
       - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
       # The next step will download the dependencies.
       - run:
-          name: Make gradlew executable
+          name: chmod permissions
           command: chmod +x ./gradlew
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum "app/build.gradle" }}
       # Then lint and run your tests!
       - run:
           name: Run Tests
           command: ./gradlew lint test
+      - store_artifacts:
+          path: app/build/reports
+          destination: reports
+      - store_test_results:
+          path: app/build/test-results
 
 
 workflows:
