--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,12 @@ jobs:
       # Then lint and run your tests!
       - run:
           name: Run Tests
-          command: ./gradlew lint test
+          command: ./gradlew lint test --stacktrace
       - store_artifacts:
-          path: app/build/reports
+          path: reports
           destination: reports
       - store_test_results:
-          path: app/build/test-results
+          path: test-results
 
 
 workflows:
