--- a/features/main/src/main/res/raw/auth_config_release.json
+++ b/features/main/src/main/res/raw/auth_config_release.json
@@ -3,10 +3,10 @@
   "redirect_uri": "com.luteh.movieapp:/oauth2redirect",
   "end_session_redirect_uri": "com.luteh.movieapp:/oauth2redirect",
   "authorization_scope": "openid email profile",
-  "discovery_uri": "http://iam.codeoffice.net/auth/realms/codeid-realm/.well-known/openid-configuration",
-  "authorization_endpoint_uri": "http://iam.codeoffice.net/auth/realms/codeid-realm/protocol/openid-connect/auth",
-  "token_endpoint_uri": "http://iam.codeoffice.net/auth/realms/codeid-realm/protocol/openid-connect/token",
-  "registration_endpoint_uri": "http://iam.codeoffice.net/auth/realms/codeid-realm/clients-registrations/openid-connect",
-  "user_info_endpoint_uri": "http://iam.codeoffice.net/auth/realms/codeid-realm/protocol/openid-connect/userinfo",
+  "discovery_uri": "http://iam.codeoffice.net/auth/realms/mcash/.well-known/openid-configuration",
+  "authorization_endpoint_uri": "http://iam.codeoffice.net/auth/realms/mcash/protocol/openid-connect/auth",
+  "token_endpoint_uri": "http://iam.codeoffice.net/auth/realms/mcash/protocol/openid-connect/token",
+  "registration_endpoint_uri": "http://iam.codeoffice.net/auth/realms/mcash/clients-registrations/openid-connect",
+  "user_info_endpoint_uri": "http://iam.codeoffice.net/auth/realms/mcash/protocol/openid-connect/userinfo",
   "https_required": false
 }
